adding boundaryNames endpoint
